<resources>
    <string name="app_name">PR10_Pogorelova_</string>
    <string name="ht">TODO</string>
    <string name="ок">TODO</string>
    <string name="ок">TODO</string>
    <string name="л77л">TODO</string>
    <string name="j56">мое смарт-устройство</string>
    <string name="_62_kg">62 kg</string>
    <string name="_82_bmp">82 bmp</string>
    <string name="k7">TODO</string>
    <string name="_1_3_km">1.3 km.</string>
    <string name="_59_kcal">59 kcal</string>
    <string name="_30_min">30 min</string>
    <string name="_1583_steps">1583 steps</string>
    <string name="todo">TODO</string>
    <string name="tykk">TODO</string>
    <string name="ky">TODO</string>
    <string name="kyk">TODO</string>
    <string name="_112576_steps">112576 steps</string>
    <string name="k7dh">краткая информация</string>
    <string name="dwd">маршруты</string>
    <string name="bdf">TODO</string>
    <string name="hrehe">TODO</string>
    <string name="htjrjt">TODO</string>
    <string name="jrj">TODO</string>
    <string name="bdfbdb">TODO</string>
    <string name="dndjt">TODO</string>
    <string name="gdgd">TODO</string>
</resources>