<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F79AFF"
    tools:context=".MainActivity2">

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ymumu"
        tools:layout_editor_absoluteX="17dp"
        tools:layout_editor_absoluteY="63dp"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/hrehe" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/hrtj"
        tools:layout_editor_absoluteX="44dp"
        tools:layout_editor_absoluteY="320dp"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/gdgd" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_112576_steps"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="240dp"
        tools:layout_editor_absoluteY="329dp"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/svsd"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="390dp"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/dndjt" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/rebr"
        tools:layout_editor_absoluteX="17dp"
        tools:layout_editor_absoluteY="445dp"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/jrj" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/rebr"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="568dp"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/htjrjt" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dwd"
        android:textSize="22sp"
        tools:layout_editor_absoluteX="240dp"
        tools:layout_editor_absoluteY="474dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/k7dh"
        android:textSize="22sp"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="603dp"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/bdrrn"
        tools:layout_editor_absoluteX="58dp"
        tools:layout_editor_absoluteY="466dp"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/bdf" />

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/tmymy"
        tools:layout_editor_absoluteX="45dp"
        tools:layout_editor_absoluteY="596dp"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/bdfbdb" />
</androidx.constraintlayout.widget.ConstraintLayout>