<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F79AFF"
    android:clickable="false"
    android:contextClickable="false"
    android:scrollbarSize="46sp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="180dp"
        android:layout_height="144dp"
        android:layout_marginEnd="17dp"
        android:background="#E5E5E5"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="539dp"
        tools:ignore="MissingConstraints"></LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="382dp"
        android:layout_height="76dp"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        android:alwaysDrawnWithCache="false"
        android:animateLayoutChanges="false"
        android:background="#E5E5E5"
        android:clickable="false"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:contextClickable="false"
        android:filterTouchesWhenObscured="false"
        android:orientation="vertical"
        android:padding="57sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="156dp"
        tools:ignore="DuplicateIds,MissingConstraints">

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="382dp"
        android:layout_height="76dp"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        android:alwaysDrawnWithCache="false"
        android:animateLayoutChanges="false"
        android:background="#FE6AE6"
        android:clickable="false"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:contextClickable="false"
        android:filterTouchesWhenObscured="false"
        android:orientation="vertical"
        android:padding="57sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="66dp"
        tools:ignore="MissingConstraints">

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="382dp"
        android:layout_height="76dp"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        android:alwaysDrawnWithCache="false"
        android:animateLayoutChanges="false"
        android:background="#E5E5E5"
        android:clickable="false"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:contextClickable="false"
        android:filterTouchesWhenObscured="false"
        android:orientation="vertical"
        android:padding="57sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="437dp"
        tools:ignore="MissingConstraints">

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout8"
        android:layout_width="382dp"
        android:layout_height="76dp"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        android:alwaysDrawnWithCache="false"
        android:animateLayoutChanges="false"
        android:background="#E5E5E5"
        android:clickable="false"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:contextClickable="false"
        android:filterTouchesWhenObscured="false"
        android:orientation="vertical"
        android:padding="57sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="342dp"
        tools:ignore="MissingConstraints">

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="382dp"
        android:layout_height="76dp"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        android:alwaysDrawnWithCache="false"
        android:animateLayoutChanges="false"
        android:background="#E5E5E5"
        android:clickable="false"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:contextClickable="false"
        android:filterTouchesWhenObscured="false"
        android:orientation="vertical"
        android:padding="57sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="248dp"
        tools:ignore="MissingConstraints">

    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        style="@style/Widget.AppCompat.TextView.SpinnerItem"
        android:layout_width="276dp"
        android:layout_height="42dp"
        android:text="@string/j56"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="120dp"
        tools:layout_editor_absoluteY="84dp"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="81dp"
        android:layout_height="58dp"
        app:srcCompat="@drawable/devices_other"
        tools:layout_editor_absoluteX="27dp"
        tools:layout_editor_absoluteY="75dp"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/k7" />

    <LinearLayout
        android:layout_width="180dp"
        android:layout_height="144dp"
        android:layout_marginStart="17dp"
        android:background="#E5E5E5"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="541dp"
        tools:ignore="MissingConstraints"></LinearLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="90dp"
        android:layout_height="36dp"
        android:text="@string/_1_3_km"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="279dp"
        tools:layout_editor_absoluteY="178dp"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="41dp"
        android:layout_height="39dp"
        app:srcCompat="@drawable/br"
        tools:layout_editor_absoluteX="46dp"
        tools:layout_editor_absoluteY="172dp"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="87dp"
        android:layout_height="39dp"
        android:text="@string/_59_kcal"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="282dp"
        tools:layout_editor_absoluteY="271dp"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="33dp"
        android:layout_height="43dp"
        android:contentDescription="@string/kyk"
        app:srcCompat="@drawable/sgg"
        tools:ignore="MissingConstraints,ImageContrastCheck"
        tools:layout_editor_absoluteX="57dp"
        tools:layout_editor_absoluteY="267dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="77dp"
        android:layout_height="30dp"
        android:text="@string/_30_min"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="289dp"
        tools:layout_editor_absoluteY="370dp"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="36dp"
        android:layout_height="34dp"
        app:srcCompat="@drawable/sbrb"
        tools:ignore="MissingConstraints,ImageContrastCheck"
        tools:layout_editor_absoluteX="57dp"
        tools:layout_editor_absoluteY="366dp"
        android:contentDescription="@string/tykk" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="120dp"
        android:layout_height="38dp"
        android:text="@string/_1583_steps"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="249dp"
        tools:layout_editor_absoluteY="460dp"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="33dp"
        android:layout_height="36dp"
        app:srcCompat="@drawable/hrtj"
        tools:layout_editor_absoluteX="61dp"
        tools:layout_editor_absoluteY="460dp"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/ky" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="52dp"
        android:layout_height="42dp"
        app:srcCompat="@drawable/erhe"
        tools:layout_editor_absoluteX="39dp"
        tools:layout_editor_absoluteY="556dp"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/ок" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="64dp"
        android:layout_height="38dp"
        android:text="@string/_62_kg"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="117dp"
        tools:layout_editor_absoluteY="559dp"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="165dp"
        android:layout_height="70dp"
        android:contentDescription="@string/ок"
        app:srcCompat="@drawable/tmym"
        tools:ignore="MissingConstraints,ImageContrastCheck"
        tools:layout_editor_absoluteX="27dp"
        tools:layout_editor_absoluteY="604dp" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="60dp"
        android:layout_height="45dp"
        app:srcCompat="@drawable/hrhrt"
        tools:layout_editor_absoluteX="229dp"
        tools:layout_editor_absoluteY="553dp"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/ht" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="82dp"
        android:layout_height="50dp"
        android:text="@string/_82_bmp"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="300dp"
        tools:layout_editor_absoluteY="556dp"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="180dp"
        android:layout_height="66dp"
        app:srcCompat="@drawable/sr"
        tools:ignore="MissingConstraints,ImageContrastCheck"
        tools:layout_editor_absoluteX="217dp"
        tools:layout_editor_absoluteY="610dp"
        android:contentDescription="@string/л77л" />

</androidx.constraintlayout.widget.ConstraintLayout>